src/test/ui/mir/issue-75053.min_tait.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/issue-75053.rs:51:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error

